--- a/userChoice.css
+++ b/userChoice.css
@@ -1,5 +1,3 @@
-
-
 /* do this when using height */
 html, body {
     margin: 0;
@@ -7,14 +5,39 @@ html, body {
     height: 100%;
   }
 
-.mood{
+
+.container {
     display:flex;
     /* column because there are two items that i want to staack */
-    flex-direction:column; 
+    flex-direction:column;
     justify-content:center;
     align-items:center;
     height:100vh;
 }
+
+
+.input{
+    text-align: center;
+    margin-bottom: 25px;
+}
+   
+
+
+input{
+    font-size: 12px;
+    width: 200px;
+    margin: 5px 0;
+
+
+}
+
+
+#recommendations {
+    font-size: 15px;
+    text-align: center;
+    margin-top: 25px;
+}
+
 
 .back{
     /* display:flex;
@@ -22,20 +45,23 @@ html, body {
     justify-content:flex-end;
     align-items:flex-start;
     /* without height will display from the top often needed with column */
-    /* height:100vh; */ 
+    /* height:100vh; */
     /* padding-bottom:400px; */
     /* absolute position removes it from the flow  */
     position: absolute;
-    bottom:10px;
-    padding-left:50px;
+    bottom: 10px;
+    padding-left: 50px;
+
 
 }
 .space{
     height:100px;
 }
 
+
 button{
     padding:20px;
     font-size:10px;
+
 
 }
