--- a/310-project16-esther/userChoice.css
+++ b/310-project16-esther/userChoice.css
@@ -73,20 +73,20 @@ button {
   color: white;
   cursor: pointer;
   font-family: 'Press Start 2P';
-  animation: glowPulse 1.5s infinite;
-}
-
-@keyframes growPulse {
-  0%, 100% {
-    box-shadow: 0 0 10px #d07efc;
-  }
-  50% {
-    box-shadow: 0 0 23px #eab2f6;
-  }
 }
 
 button:hover {
   background-color: #d07efc;
   color: #1a0033;
   transform: scale(1.03);
+}
+
+#backButton {
+  background-color: #c25046;
+  border: 3px solid #ffb3a7;
+}
+
+#backButton:hover {
+  background-color: #ffb3a7;
+  color: #1a0033;
 }
